<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="300sp"
              android:layout_height="wrap_content"
              android:layout_margin="20sp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_login"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText
            android:id="@+id/login_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView
            android:layout_marginTop="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_password"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    <!--android:inputType="textPassword"-->
    <CheckBox
            android:id="@+id/show_password_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/show_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
        android:nestedScrollingEnabled="false"
        android:enabled="true"
        android:checked="false" />

    <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/enter"
            android:background="@drawable/btn_gray"/>

</LinearLayout>